Bug 424974 - .desktop shortcut does not resolve ~
Summary: .desktop shortcut does not resolve ~
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kservice
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.68.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-03 20:26 UTC by Holger
Modified: 2020-08-13 10:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.74
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Holger 2020-08-03 20:26:30 UTC
SUMMARY

Usage of tilde-sign "~" in either working-directory or as path to executable will stop the program from running.

STEPS TO REPRODUCE
1. see screenshot in bug 167502 comment #4
2. create shortcut to e.g. executable bash-script with absolute path
3. check the shortcut works
4. incorporate the tilde character

OBSERVED RESULT
program does not start anymore

EXPECTED RESULT
program starts, if ~ is replaced verbose

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Kernel Version: 5.4.0-42-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-4700MQ CPU @ 2.40GHz
Memory: 15,6 GiB

ADDITIONAL INFORMATION
see also bug 424973
Comment 1 Bug Janitor Service 2020-08-04 20:39:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kservice/-/merge_requests/6
Comment 2 Alexander Lohnau 2020-08-13 10:22:12 UTC
Git commit 32dc0a76998dc81cfa963f8c78070fcef970c21f by Alexander Lohnau.
Committed on 12/08/2020 at 10:10.
Pushed by dfaure into branch 'master'.

Expand tilde character when reading working directory
FIXED-IN: 5.74

You might have to run kbuildsycoca5 to activate rebuild the cache.

You have to run kbuildsycoca5 to get the new change

M  +2    -1    src/services/kservice.cpp

https://invent.kde.org/frameworks/kservice/commit/32dc0a76998dc81cfa963f8c78070fcef970c21f