Expand tilde character when reading working directory

BUG: 424974
FIXED-IN: 5.74

You might have to run kbuildsycoca5 to activate rebuild the cache.

You have to run kbuildsycoca5 to get the new change